# RustyOS2

./: .gitignore  Cargo.toml  DISK.img  build.rs  makefile  run.bat
.cargo/: config.toml
src/: main.rs
src/arch/x64/: Cargo.toml  linker.ld
src/arch/x64/.cargo/: config.toml
src/arch/x64/src/: assembly.rs  console.rs  descriptor.rs  entry.rs  interrupt.rs  keyboard.rs  lib.rs  pic.rs  shell.rs  timer.rs  types.rs  utility.rs
src/arch/x64/src/process/: idle.rs  mod.rs  round_robin.rs  switch.asm
src/arch/x86/: Cargo.toml  linker.ld  rustc-ice-2024-01-02T23_18_15-17268.txt  triple.json
src/arch/x86/.cargo/: config.toml
src/arch/x86/src/: EntryPoint.s  ModeSwitch.asm  lib.rs  mode_switch.rs  page.rs
src/boot/: BootLoader.asm
