[package]
name = "temp_os"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
positioned-io = "0.2"
x86 = { path = "./src/arch/x86" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"